--- a/PageMenu/Contact/index.html
+++ b/PageMenu/Contact/index.html
@@ -19,7 +19,7 @@
             <div class="nav-bar">
                 <a data-v-navLinks href="../.."> About me </a>
                 <a data-v-navLinks href="../GameProjects"> Games </a>
-                <!--<a data-v-navLinks href="../other-projects"> Other projects </a>-->
+                <a data-v-navLinks href="../ToolProjects"> Tools </a>
                 <a data-v-navLinks href="../Resume"> Resume </a>
                 <a data-v-navLinks href="" class="link-active" aria-current="page"> Contact </a>
 
@@ -32,7 +32,7 @@
                         <ul>
                             <li><a data-v-sandwitchLinks href="../../"> About me </a></li>
                             <li><a data-v-sandwitchLinks href="../GameProjects"> Games </a></li>
-                            <!--<li><a data-v-navLinks href="./PageMenu/other-projects"> Other projects </a></li>-->
+                            <li><a data-v-sandwitchLinks href="../ToolProjects"> Tools </a></li>
                             <li><a data-v-sandwitchLinks href="../Resume"> Resume </a></li>
                             <li><a data-v-sandwitchLinks href="" class="link-active" aria-current="page"> Contact </a></li>
                         </ul>
