--- a/PageMenu/GameProjects/index.html
+++ b/PageMenu/GameProjects/index.html
@@ -18,7 +18,7 @@
             <div class="nav-bar">
                 <a data-v-navLinks href="../../"> About me </a>
                 <a data-v-navLinks href="" class="link-active" aria-current="page"> Games </a>
-                <!--<a data-v-navLinks href="../other-projects"> Other projects </a>-->
+                <a data-v-navLinks href="../ToolProjects"> Tools </a>
                 <a data-v-navLinks href="../Resume"> Resume </a>
                 <a data-v-navLinks href="../Contact"> Contact </a>
 
@@ -31,7 +31,7 @@
                         <ul>
                             <li><a data-v-sandwitchLinks href="../../"> About me </a></li>
                             <li><a data-v-sandwitchLinks href="" class="link-active" aria-current="page"> Games </a></li>
-                            <!--<li><a data-v-navLinks href="./PageMenu/other-projects"> Other projects </a></li>-->
+                            <li><a data-v-sandwitchLinks href="../ToolProjects"> Tools </a></li>
                             <li><a data-v-sandwitchLinks href="../Resume"> Resume </a></li>
                             <li><a data-v-sandwitchLinks href="../Contact"> Contact </a></li>
                         </ul>
@@ -69,7 +69,7 @@
                                 <img class="project-item-image" src="../../img/Projects/ReversedHero/thumbnail.png"/>
                                 <div class="title-bar" style="background-color: rgba(0, 0, 0, 0.867)">
                                     <div class="title-text">
-                                        Starland
+                                        Reversed Hero
                                     </div>
                                 </div>
                             </div>
@@ -82,7 +82,7 @@
                                 <img class="project-item-image" src="../../img/Projects/RushHour/thumbnail.png"/>
                                 <div class="title-bar" style="background-color: rgba(0, 0, 0, 0.867)">
                                     <div class="title-text">
-                                        Starland
+                                        Rush Hour
                                     </div>
                                 </div>
                             </div>
@@ -91,6 +91,24 @@
                                 <div class="title-bar" style="background-color: rgba(0, 0, 0, 0.867)">
                                     <div class="title-text">
                                         Can You Reach The Door ?
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="project-item" id="Miniville-Open-Button">
+                                <img class="project-item-image" src="../../img/Projects/Miniville/thumbnail.png"/>
+                                <div class="title-bar" style="background-color: rgba(0, 0, 0, 0.867)">
+                                    <div class="title-text">
+                                        Miniville
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="project-list">
+                            <div class="project-item high wide" id="Botanicat-Open-Button">
+                                <img class="project-item-image" src="../../img/Projects/Botanicat/thumbnail.png"/>
+                                <div class="title-bar" style="background-color: rgba(0, 0, 0, 0.867)">
+                                    <div class="title-text">
+                                        Botanicat
                                     </div>
                                 </div>
                             </div>
@@ -114,7 +132,7 @@
                                 <img src="../../img/Projects/Epitaph/thumbnail.png" frameborder="0">
                             </div>
                             <div class="paragraph center">
-                                <a href="https://iconic-snails.itch.io/epitaph" target="_blank">
+                                <a data-v-imgLink href="https://iconic-snails.itch.io/epitaph" target="_blank">
                                     <img src="../../img/itchio-link.png" style="width: 100%; max-width: 300px">
                                 </a>
                             </div>
@@ -162,7 +180,7 @@
                                 <img src="../../img/Projects/Starland/thumbnail.png" frameborder="0">
                             </div>
                             <div class="paragraph center">
-                                <a href="https://iconic-snails.itch.io/Starland" target="_blank">
+                                <a data-v-imgLink href="https://iconic-snails.itch.io/Starland" target="_blank">
                                     <img src="../../img/itchio-link.png"  style="width: 100%; max-width: 300px">
                                 </a>
                             </div>
@@ -204,14 +222,14 @@
                     <div class="dialog-content">
                         <div>
                             <div class="paragraph">
-                                Reversed Hero is an game made for the Cram Jam! 2023. <br />
-                                This game is about a player who controls monsters and wants to kill the humans.
+                                "Reversed Hero" is an game created for the Cram Jam! 2023. <br />
+                                This game is about a player who controls monsters and aims to kill the humans.
                             </div>
                             <div class="paragraph center">
                                 <iframe class="youtube" src="https://youtube.com/embed/t26dUvmkhAY" frameborder="0" allowfullscreen></iframe>
                             </div>
                             <div class="paragraph center">
-                                <a href="https://iconic-snails.itch.io/reversed-hero" target="_blank">
+                                <a data-v-imgLink href="https://iconic-snails.itch.io/reversed-hero" target="_blank">
                                     <img src="../../img/itchio-link.png"  style="width: 100%; max-width: 300px">
                                 </a>
                             </div>
@@ -253,14 +271,13 @@
                     <div class="dialog-content">
                         <div>
                             <div class="paragraph">
-                                Rush Hour is a game made for the Cnam ENJMIN computer science license first year project. <br />
-                                This portal game like game is my first Unity game.
+                                "Rush Hour" is a game created for the first-year of the Cnam ENJMIN Computer Science bachelor's degree.
                             </div>
                             <div class="paragraph center">
                                 <img src="../../img/Projects/RushHour/thumbnail.png" frameborder="0">
                             </div>
                             <div class="paragraph center">
-                                <a href="https://hrndz-joseph.itch.io/rushhour" target="_blank">
+                                <a data-v-imgLink href="https://hrndz-joseph.itch.io/rushhour" target="_blank">
                                     <img src="../../img/itchio-link.png"  style="width: 100%; max-width: 300px">
                                 </a>
                             </div>
@@ -316,14 +333,14 @@
                     <div class="dialog-content">
                         <div>
                             <div class="paragraph">
-                                Can You Reach The Door? is a game made for the Cnam ENJMIN's computer science bachelor entrance exam <br />
+                                "Can You Reach The Door?" is a game created for the Cnam ENJMIN Computer Science Bachelor entrance exam <br />
                                 This is my first Unity game.
                             </div>
                             <div class="paragraph center">
                                 <img src="../../img/Projects/CanYouReachTheDoor/thumbnail.png" frameborder="0">
                             </div>
                             <div class="paragraph center">
-                                <a href="https://gunilem.itch.io/can-you-reach-the-door" target="_blank">
+                                <a data-v-imgLink href="https://gunilem.itch.io/can-you-reach-the-door" target="_blank">
                                     <img src="../../img/itchio-link.png"  style="width: 100%; max-width: 300px">
                                 </a>
                             </div>
@@ -341,14 +358,6 @@
                                     </li>
                                 </ul>
                             </div>
-
-                            <!--
-                    <div class="paragraph center">
-                        <img class="screenshot" src="../img/Projects/CanYouReachTheDoor/1.png" />
-                        <img class="screenshot" src="../img/Projects/CanYouReachTheDoor/2.png" />
-                        <img class="screenshot" src="../img/Projects/CanYouReachTheDoor/3.png" />
-                    </div>
-                    -->
                         </div>
 
                     </div>
@@ -357,6 +366,84 @@
                     </div>
                 </div>
             </div>
+            <div class="game-popup" id="Miniville-div">
+                <div class="overlay" id="Miniville-Close-Button0"></div>
+                <div class="dialog" style="background-color: rgb(0, 0, 0)">
+                    <h1 class="dialog-title"> Can You Reach The Door? </h1>
+                    <div class="dialog-close" id="Miniville-Close-Button1">
+                        <img src="../../img/close.png">
+                    </div>
+                    <div class="dialog-content">
+                        <div>
+                            <div class="paragraph">
+                                "Miniville" is a game created during a course on C# programming in my first year of the Bachelor's degree in Computer Science at Cnam Enjmin. <br />
+                                This game is an adaptation of the french board game called "Miniville". <br />
+                                <br />
+                                It was my first "big" project in Unity, developed with a team of four people.
+                            </div>
+                            <div class="paragraph center">
+                                <img src="../../img/Projects/Miniville/Banner.png" frameborder="0">
+                            </div>
+                            <div class="paragraph center">
+                                <a data-v-imgLink href="https://gunilem.itch.io/Miniville" target="_blank">
+                                    <img src="../../img/itchio-link.png"  style="width: 100%; max-width: 300px">
+                                </a>
+                            </div>
+                            <div class="paragraph">
+                                Creation info :
+                                <ul>
+                                    <li>
+                                        Team: 4 people
+                                    </li>
+                                    <li>
+                                        Time: 2 weeks
+                                    </li>
+                                    <li>
+                                        Creation context: C# programming course, first year of the Bachelor's degree in Computer Science at Cnam Enjmin
+                                    </li>
+                                </ul>
+                            </div>
+
+                            
+                    <div class="paragraph center">
+                        <img class="screenshot" src="../../img/Projects/Miniville/1.png" />
+                        <img class="screenshot" src="../../img/Projects/Miniville/2.png" />
+                        <img class="screenshot" src="../../img/Projects/Miniville/3.png" />
+                        <img class="screenshot" src="../../img/Projects/Miniville/4.png" />
+                    </div>
+                        </div>
+
+                    </div>
+                    <div class="dialog-bottom" id="Miniville-Close-Button2">
+                        <a class="dialog-close-button"> Close </a>
+                    </div>
+                </div>
+            </div>
+            <div class="game-popup" id="Botanicat-div">
+                <div class="overlay" id="Botanicat-Close-Button0"></div>
+                <div class="dialog" style="background-color: rgb(0, 0, 0)">
+                    <h1 class="dialog-title"> Can You Reach The Door? </h1>
+                    <div class="dialog-close" id="Botanicat-Close-Button1">
+                        <img src="../../img/close.png">
+                    </div>
+                    <div class="dialog-content">
+                        <div>
+                            <div class="paragraph">
+                                "Botanicat" is a game created for the second-year of the Cnam ENJMIN Computer Science bachelor's degree. </br>
+                                The game has not been released yet and the release date is set for early july.
+                            </div>
+                            <div class="paragraph center">
+                                <img src="../../img/Projects/Botanicat/thumbnail.png" frameborder="0">
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="dialog-bottom" id="Botanicat-Close-Button2">
+                        <a class="dialog-close-button"> Close </a>
+                    </div>
+                </div>
+            </div>
+            
 
         </div>
         <div class="footer">
@@ -379,6 +466,8 @@
 
         gamePopup('CanYouReachTheDoor');
         gamePopup('RushHour');
+        gamePopup('Miniville');
+        gamePopup('Botanicat');
 
         function gamePopup(gameName) {
             const openButton = document.getElementById(gameName + '-Open-Button');
