--- a/PageMenu/ToolProjects/index.html
+++ b/PageMenu/ToolProjects/index.html
@@ -43,7 +43,7 @@
             <div style=" width:100%; max-width:1500px">
                 <h1> Games!</h1>
                 <div style="margin-bottom: 30px">
-                    Here are some tools that I've created for my games or other projects
+                    Here are some tools that I've created for my games and other projects
                 </div>
                 <div>
                     <div class="project-list-section">
