--- a/PageMenu/GameProjects/index.html
+++ b/PageMenu/GameProjects/index.html
@@ -369,7 +369,7 @@
             <div class="game-popup" id="Miniville-div">
                 <div class="overlay" id="Miniville-Close-Button0"></div>
                 <div class="dialog" style="background-color: rgb(0, 0, 0)">
-                    <h1 class="dialog-title"> Can You Reach The Door? </h1>
+                    <h1 class="dialog-title"> Miniville </h1>
                     <div class="dialog-close" id="Miniville-Close-Button1">
                         <img src="../../img/close.png">
                     </div>
@@ -422,7 +422,7 @@
             <div class="game-popup" id="Botanicat-div">
                 <div class="overlay" id="Botanicat-Close-Button0"></div>
                 <div class="dialog" style="background-color: rgb(0, 0, 0)">
-                    <h1 class="dialog-title"> Can You Reach The Door? </h1>
+                    <h1 class="dialog-title"> Botanicat </h1>
                     <div class="dialog-close" id="Botanicat-Close-Button1">
                         <img src="../../img/close.png">
                     </div>
