--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link href="./css/mainStyle.css" rel="stylesheet">
     <link href="./css/navbar.css" rel="stylesheet">
+    <link rel="icon" href=img/ProfilePicture.png>
     <title>Paul Lemattre</title>
     <meta name=description content="Paul's portfolio website. Apprenticeship studient gameplay developper">
     <meta property=og:title content="Paul Lemattre">
-    <meta property=og:description content="Apprenticeship studient gameplay developper">
-    <!--<meta property=og:url content=https://scheefer.me>-->
-    <!--<meta property=og:image content=https://scheefer.me/img/avatar-og.png>-->
+    <meta property=og:description content="Apprenticeship studient Game developper">
+    <meta property=og:url content=https://gunilem.github.io>
+    <meta property=og:image content=img/ProfilePicture.png>
 </head>
 
 <body>
