update tool projects

--- a/PageMenu/ToolProjects/index.html
+++ b/PageMenu/ToolProjects/index.html
@@ -107,6 +107,28 @@
                                     </li>
                                 </ul>
                             </div>
+                            <div class="paragraph">
+                                <h2> Incomming Updates: </h2>
+                                <div class="Dev-Log">
+                                    <h3> </h3>
+                                    <div class="paragraph">
+                                        <ul>
+                                            <li> Make a unity package Downloadable </li>
+                                            <li> Add the ability to remove an entry </li>
+                                            <li> Add the ability to move the entry up and down inside the editor </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                                <h2> Things I want to implement: </h2>
+                                <div class="Dev-Log">
+                                    <h3> </h3>
+                                    <div class="paragraph">
+                                        <ul>
+                                            <li> Add data base support </li>
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
                             <div class="paragraph center">
                                 <h3> Editor to localise Strings </h3>
                                 <img class="screenshot" src="../../img/Projects/Tools/Localisation_Tool/1.png" />
@@ -142,8 +164,8 @@
                     <div class="dialog-content">
                         <div>
                             <div class="paragraph">
-                                Feur is a game Engine currently under construction. </br>
-                                I will provide update and feedback you on the dev log here. </br>
+                                Feur is a game Engine in C++ currently under construction. </br>
+                                I will provide updates and goals here. </br>
                                 </br>
                                 Since I'm new to game engine creation, I'm following The Cherno's Game Engine series. Link here :<a href="https://www.youtube.com/playlist?list=PLlrATfBNZ98dC-V-N3m0Go4deliWHPFwT"> https://www.youtube.com/playlist?list=PLlrATfBNZ98dC-V-N3m0Go4deliWHPFwT </a>
                             </div>
@@ -153,19 +175,24 @@
                                 </a>
                             </div>
                             <div class="paragraph">
-                                <h2> Dev Logs </h2>
+                                <h2> Goals </h2>
                                 <div class="Dev-Log">
-                                    <h3> Log 1 </h3>
+                                    <h3> Make a GUI library </h3>
                                     <div class="paragraph">
                                         <ul>
-                                            <li> Add fondation of a Layer system </li>
-                                            <li> Link window events to the Event system </li>
-                                            <li> Add <a href="https://github.com/glfw/glfw"> GLFW </a> to handle windows </li>
-                                            <li> Setup precompile headers </li>
-                                            <li> Add Event system based on blocking architecture </li>
-                                            <li> Add <a href="https://github.com/premake/premake-core"> premake </a> to the project </li>
-                                            <li> Add Log system to the engine using <a href="https://github.com/gabime/spdlog"> sqdlog </a> for now </li>
-                                            <li> Setup basic application and entry point </li>
+                                            <li> Implement graphic library </li>
+                                                <ul>
+                                                    <li> Vulkan <- I'm here </li>
+                                                    <li> OpenGL </li>
+                                                    <li> DirectX </li>
+                                                </ul>
+                                            <li> Make dockable windows </li>
+                                                <ul>
+                                                    <li> use GLFW <- I'm here </li>
+                                                    <li> review window Bahaviour </li>
+                                                    <li> make window Dockable </li>
+                                                </ul>
+                                            <li> Make UI Element with CSS-style layout </li>
                                         </ul>
                                     </div>
                                 </div>
