update CV and tool project

--- a/PageMenu/ToolProjects/index.html
+++ b/PageMenu/ToolProjects/index.html
@@ -116,6 +116,7 @@
                                             <li> Make a unity package Downloadable </li>
                                             <li> Add the ability to remove an entry </li>
                                             <li> Add the ability to move the entry up and down inside the editor </li>
+                                            <li> Change the color of a modified entry </li>
                                         </ul>
                                     </div>
                                 </div>
