--- a/PageMenu/Resume/index.html
+++ b/PageMenu/Resume/index.html
@@ -87,7 +87,7 @@
                         </div>
                         <div style="margin-left: 20px">
                             <h3> <a href="https://babaoo.com"> Babaoo </a> </h3>
-                            <div class="skill"> <img src="../../img/calendrier.png" /> since january 2024 </div>
+                            <div class="skill"> <img src="../../img/calendrier.png" /> january 2024 - april 2025 </div>
                             <div class="skill"> <img src="../../img/contract.png" /> Unity integrator and prototypist (apprenticeship contract) </div>
                             <div class="skill"> <img src="../../img/contract.png" /> 4 days at work, 1 day at school per week (35 hours in total) </div>
 
@@ -102,10 +102,10 @@
                         </div>
                         <div class="Below-link-container">
                             <div class="Below-link">
-                                <a data-v-downloadLink href="../../Asset/PDF/CV/Lemattre_Paul_Resume_19082024.pdf" target="_blank" title="Lemattre Paul Resume 19082024"> Download my Resume</a>
+                                <a data-v-downloadLink href="../../Asset/PDF/CV/CV_Lemattre_Paul.pdf" target="_blank" title="Lemattre Paul Resume 19082024"> Download my Resume</a>
                             </div>
                         </div>
-                        <p style="font-size:0.75em"> Last Update : 21/09/2024 </p>
+                        <p style="font-size:0.75em"> Last Update : 05/13/2025 </p>
                    </div>
                 <div style="clear: both"></div>
                 
